Move hard_tanh to activations
This reduces the API surface of the `quantizers` module.

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -87,20 +87,23 @@
     {
       "cell_type": "code",
       "source": [
-        "kwargs = dict(input_quantizer=\"sign_clip_ste\", kernel_quantizer=\"sign_clip_ste\")\n",
+        "kwargs = dict(input_quantizer=\"ste_sign\", kernel_quantizer=\"ste_sign\")\n",
         "\n",
         "model = tf.keras.models.Sequential()\n",
         "\n",
-        "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"sign_clip_ste\", use_bias=False, input_shape=(28, 28, 1)))\n",
+        "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", use_bias=False, input_shape=(28, 28, 1)))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "\n",
         "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "\n",
         "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
+        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "model.add(tf.keras.layers.Flatten())\n",
         "\n",
         "model.add(xq.layers.QuantDense(10, use_bias=False, **kwargs))\n",
@@ -146,15 +149,21 @@
             "_________________________________________________________________\n",
             "batch_normalization_v1_4 (Ba (None, 13, 13, 32)        96        \n",
             "_________________________________________________________________\n",
+            "activation_4 (Activation)    (None, 13, 13, 32)        0         \n",
+            "_________________________________________________________________\n",
             "quant_conv2d_4 (QuantConv2D) (None, 11, 11, 64)        18432     \n",
             "_________________________________________________________________\n",
             "max_pooling2d_3 (MaxPooling2 (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
             "batch_normalization_v1_5 (Ba (None, 5, 5, 64)          192       \n",
             "_________________________________________________________________\n",
+            "activation_5 (Activation)    (None, 5, 5, 64)          0         \n",
+            "_________________________________________________________________\n",
             "quant_conv2d_5 (QuantConv2D) (None, 3, 3, 64)          36864     \n",
             "_________________________________________________________________\n",
             "batch_normalization_v1_6 (Ba (None, 3, 3, 64)          192       \n",
+            "_________________________________________________________________\n",
+            "activation_6 (Activation)    (None, 3, 3, 64)          0         \n",
             "_________________________________________________________________\n",
             "flatten_1 (Flatten)          (None, 576)               0         \n",
             "_________________________________________________________________\n",
@@ -162,7 +171,7 @@
             "_________________________________________________________________\n",
             "batch_normalization_v1_7 (Ba (None, 10)                30        \n",
             "_________________________________________________________________\n",
-            "activation_1 (Activation)    (None, 10)                0         \n",
+            "activation_7 (Activation)    (None, 10)                0         \n",
             "=================================================================\n",
             "Total params: 61,854\n",
             "Trainable params: 61,514\n",
@@ -203,21 +212,21 @@
           "name": "stdout",
           "text": [
             "Epoch 1/6\n",
-            "60000/60000 [==============================] - 75s 1ms/sample - loss: 0.4950 - acc: 0.9700\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 65s 1ms/sample - loss: 0.6066 - acc: 0.9391\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 2/6\n",
-            "60000/60000 [==============================] - 74s 1ms/sample - loss: 0.4865 - acc: 0.9719\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 59s 978us/sample - loss: 0.5201 - acc: 0.9647\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 3/6\n",
-            "60000/60000 [==============================] - 75s 1ms/sample - loss: 0.4806 - acc: 0.9736\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 58s 972us/sample - loss: 0.4999 - acc: 0.9688\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 4/6\n",
-            "60000/60000 [==============================] - 80s 1ms/sample - loss: 0.4778 - acc: 0.9747\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 58s 964us/sample - loss: 0.4908 - acc: 0.9715\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 5/6\n",
-            "60000/60000 [==============================] - 77s 1ms/sample - loss: 0.4750 - acc: 0.9751\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 60s 994us/sample - loss: 0.4865 - acc: 0.9722\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 6/6\n",
-            "60000/60000 [==============================] - 80s 1ms/sample - loss: 0.4747 - acc: 0.9753\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+            "60000/60000 [==============================] - 69s 1ms/sample - loss: 0.4823 - acc: 0.9729\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
           ]
         }
       ],
-      "execution_count": 9,
+      "execution_count": 7,
       "metadata": {
         "colab_type": "code",
         "id": "MdDzI75PUXrG",
@@ -244,11 +253,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000/10000 [==============================] - 3s 347us/sample - loss: 0.4468 - acc: 0.9800\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+            "10000/10000 [==============================] - 3s 310us/sample - loss: 0.4634 - acc: 0.9785\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
           ]
         }
       ],
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "colab_type": "code",
         "id": "gtyDF0MKUcM7",
@@ -258,18 +267,18 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"Test accuracy:\", test_acc, \"%\")"
+        "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
       ],
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test accuracy: 0.98 %\n"
+            "Test accuracy 97.85 %\n"
           ]
         }
       ],
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {
         "colab_type": "code",
         "id": "0LvwaKhtUdOo",
@@ -279,7 +288,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As you can see, our simple binarized CNN has achieved a test accuracy of over 98%. Not bad for a few lines of code!"
+        "As you can see, our simple binarized CNN has achieved a test accuracy of over 97.5 %. Not bad for a few lines of code!"
       ],
       "metadata": {
         "colab_type": "text",
