Add WeightClip constraint
Closes #29

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -87,11 +87,11 @@
     {
       "cell_type": "code",
       "source": [
-        "kwargs = dict(input_quantizer=\"ste_sign\", kernel_quantizer=\"ste_sign\")\n",
+        "kwargs = dict(input_quantizer=\"ste_sign\", kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\")\n",
         "\n",
         "model = tf.keras.models.Sequential()\n",
         "\n",
-        "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", use_bias=False, input_shape=(28, 28, 1)))\n",
+        "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
@@ -180,7 +180,7 @@
           ]
         }
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab_type": "code",
         "id": "8-C4XBg4UTJy",
@@ -212,21 +212,21 @@
           "name": "stdout",
           "text": [
             "Epoch 1/6\n",
-            "60000/60000 [==============================] - 65s 1ms/sample - loss: 0.6066 - acc: 0.9391\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 79s 1ms/sample - loss: 0.5970 - acc: 0.9440\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 2/6\n",
-            "60000/60000 [==============================] - 59s 978us/sample - loss: 0.5201 - acc: 0.9647\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 81s 1ms/sample - loss: 0.5153 - acc: 0.9645\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 3/6\n",
-            "60000/60000 [==============================] - 58s 972us/sample - loss: 0.4999 - acc: 0.9688\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 76s 1ms/sample - loss: 0.4976 - acc: 0.9693\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 4/6\n",
-            "60000/60000 [==============================] - 58s 964us/sample - loss: 0.4908 - acc: 0.9715\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 77s 1ms/sample - loss: 0.4903 - acc: 0.9711\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 5/6\n",
-            "60000/60000 [==============================] - 60s 994us/sample - loss: 0.4865 - acc: 0.9722\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 80s 1ms/sample - loss: 0.4840 - acc: 0.9724\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 6/6\n",
-            "60000/60000 [==============================] - 69s 1ms/sample - loss: 0.4823 - acc: 0.9729\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+            "60000/60000 [==============================] - 76s 1ms/sample - loss: 0.4818 - acc: 0.9733\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
           ]
         }
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "colab_type": "code",
         "id": "MdDzI75PUXrG",
@@ -253,11 +253,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "10000/10000 [==============================] - 3s 310us/sample - loss: 0.4634 - acc: 0.9785\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+            "10000/10000 [==============================] - 3s 290us/sample - loss: 0.4339 - acc: 0.9806\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
           ]
         }
       ],
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "colab_type": "code",
         "id": "gtyDF0MKUcM7",
@@ -274,11 +274,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test accuracy 97.85 %\n"
+            "Test accuracy 98.06 %\n"
           ]
         }
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "colab_type": "code",
         "id": "0LvwaKhtUdOo",
@@ -288,7 +288,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As you can see, our simple binarized CNN has achieved a test accuracy of over 97.5 %. Not bad for a few lines of code!"
+        "As you can see, our simple binarized CNN has achieved a test accuracy of over 98 %. Not bad for a few lines of code!"
       ],
       "metadata": {
         "colab_type": "text",
