Fix math parsing on MKDocs

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -83,7 +83,7 @@
         "In the forward pass the quantization function\n",
         "$$\n",
         "q(x) = \\begin{cases}\n",
-        "    -1 & x < 0 \\\\\n",
+        "    -1 & x < 0 \\\\\\\n",
         "    1 & x \\geq 0\n",
         "\\end{cases}\n",
         "$$\n",
@@ -93,7 +93,7 @@
         "(essentially the binarization is replaced by a clipped identity on the backward pass):\n",
         "$$\n",
         "\\frac{\\partial q(x)}{\\partial x} = \\begin{cases}\n",
-        "    1 & \\left|x\\right| \\leq 1 \\\\\n",
+        "    1 & \\left|x\\right| \\leq 1 \\\\\\\n",
         "    0 & \\left|x\\right| > 1\n",
         "\\end{cases}\n",
         "$$\n",
