Improve MNIST tutorial (#56)
* Improve MNIST tutorial

This adds more explainatory comments

* Fix math parsing on MKDocs

--- a/examples/mnist.ipynb
+++ b/examples/mnist.ipynb
@@ -62,8 +62,8 @@
         "train_images = train_images.reshape((60000, 28, 28, 1))\n",
         "test_images = test_images.reshape((10000, 28, 28, 1))\n",
         "\n",
-        "# Normalize pixel values to be between 0 and 1\n",
-        "train_images, test_images = train_images / 255.0, test_images / 255.0"
+        "# Normalize pixel values to be between -1 and 1\n",
+        "train_images, test_images = train_images / 127.5 - 1, test_images / 127.5 - 1"
       ],
       "outputs": [],
       "execution_count": 2,
@@ -77,7 +77,29 @@
       "cell_type": "markdown",
       "source": [
         "### Create the model\n",
-        "\nThis will create a simple binarized convolutional network trained using the straight-through estimator (STE)"
+        "\n",
+        "This will create a simple binarized convolutional network.\n",
+        "\n",
+        "In the forward pass the quantization function\n",
+        "$$\n",
+        "q(x) = \\begin{cases}\n",
+        "    -1 & x < 0 \\\\\\\n",
+        "    1 & x \\geq 0\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "is used to binarize the activations and the latent full precision weights. The gradient of this function is zero almost everywhere which prevents the model from learning.\n",
+        "\n",
+        "To be able to train the model the gradient is instead estimated using the Straight-Through Estimator (STE)\n",
+        "(essentially the binarization is replaced by a clipped identity on the backward pass):\n",
+        "$$\n",
+        "\\frac{\\partial q(x)}{\\partial x} = \\begin{cases}\n",
+        "    1 & \\left|x\\right| \\leq 1 \\\\\\\n",
+        "    0 & \\left|x\\right| > 1\n",
+        "\\end{cases}\n",
+        "$$\n",
+        "\n",
+        "In XQuant this can be done by using `input_quantizer=\"ste_sign\"` and `kernel_quantizer=\"ste_sign\"`.\n",
+        "Additionally the latent full precision weights are clipped to be between -1 and 1 using `kernel_constraint=\"weight_clip\"`."
       ],
       "metadata": {
         "colab_type": "text",
@@ -94,24 +116,23 @@
         "model.add(xq.layers.QuantConv2D(32, (3, 3), kernel_quantizer=\"ste_sign\", kernel_constraint=\"weight_clip\", use_bias=False, input_shape=(28, 28, 1)))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
-        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "\n",
         "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.MaxPooling2D((2, 2)))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
-        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "\n",
         "model.add(xq.layers.QuantConv2D(64, (3, 3), use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
-        "model.add(tf.keras.layers.Activation(\"hard_tanh\"))\n",
         "model.add(tf.keras.layers.Flatten())\n",
         "\n",
+        "model.add(xq.layers.QuantDense(64, use_bias=False, **kwargs))\n",
+        "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "model.add(xq.layers.QuantDense(10, use_bias=False, **kwargs))\n",
         "model.add(tf.keras.layers.BatchNormalization(scale=False))\n",
         "model.add(tf.keras.layers.Activation(\"softmax\"))"
       ],
       "outputs": [],
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "colab_type": "code",
         "id": "L9YmGQBQPrdn",
@@ -143,44 +164,42 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "quant_conv2d_3 (QuantConv2D) (None, 26, 26, 32)        288       \n",
+            "quant_conv2d_18 (QuantConv2D (None, 26, 26, 32)        288       \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_2 (MaxPooling2 (None, 13, 13, 32)        0         \n",
+            "max_pooling2d_12 (MaxPooling (None, 13, 13, 32)        0         \n",
             "_________________________________________________________________\n",
-            "batch_normalization_v1_4 (Ba (None, 13, 13, 32)        96        \n",
+            "batch_normalization_v1_20 (B (None, 13, 13, 32)        96        \n",
             "_________________________________________________________________\n",
-            "activation_4 (Activation)    (None, 13, 13, 32)        0         \n",
+            "quant_conv2d_19 (QuantConv2D (None, 11, 11, 64)        18432     \n",
             "_________________________________________________________________\n",
-            "quant_conv2d_4 (QuantConv2D) (None, 11, 11, 64)        18432     \n",
+            "max_pooling2d_13 (MaxPooling (None, 5, 5, 64)          0         \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_3 (MaxPooling2 (None, 5, 5, 64)          0         \n",
+            "batch_normalization_v1_21 (B (None, 5, 5, 64)          192       \n",
             "_________________________________________________________________\n",
-            "batch_normalization_v1_5 (Ba (None, 5, 5, 64)          192       \n",
+            "quant_conv2d_20 (QuantConv2D (None, 3, 3, 64)          36864     \n",
             "_________________________________________________________________\n",
-            "activation_5 (Activation)    (None, 5, 5, 64)          0         \n",
+            "batch_normalization_v1_22 (B (None, 3, 3, 64)          192       \n",
             "_________________________________________________________________\n",
-            "quant_conv2d_5 (QuantConv2D) (None, 3, 3, 64)          36864     \n",
+            "flatten_6 (Flatten)          (None, 576)               0         \n",
             "_________________________________________________________________\n",
-            "batch_normalization_v1_6 (Ba (None, 3, 3, 64)          192       \n",
+            "quant_dense_6 (QuantDense)   (None, 64)                36864     \n",
             "_________________________________________________________________\n",
-            "activation_6 (Activation)    (None, 3, 3, 64)          0         \n",
+            "batch_normalization_v1_23 (B (None, 64)                192       \n",
             "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 576)               0         \n",
+            "quant_dense_7 (QuantDense)   (None, 10)                640       \n",
             "_________________________________________________________________\n",
-            "quant_dense_1 (QuantDense)   (None, 10)                5760      \n",
+            "batch_normalization_v1_24 (B (None, 10)                30        \n",
             "_________________________________________________________________\n",
-            "batch_normalization_v1_7 (Ba (None, 10)                30        \n",
-            "_________________________________________________________________\n",
-            "activation_7 (Activation)    (None, 10)                0         \n",
+            "activation_6 (Activation)    (None, 10)                0         \n",
             "=================================================================\n",
-            "Total params: 61,854\n",
-            "Trainable params: 61,514\n",
-            "Non-trainable params: 340\n",
+            "Total params: 93,790\n",
+            "Trainable params: 93,322\n",
+            "Non-trainable params: 468\n",
             "_________________________________________________________________\n"
           ]
         }
       ],
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {
         "colab_type": "code",
         "id": "8-C4XBg4UTJy",
@@ -191,7 +210,8 @@
       "cell_type": "markdown",
       "source": [
         "### Compile and train the model\n",
-        "\nNote: This may take a few minutes depending on your system."
+        "\n",
+        "Note: This may take a few minutes depending on your system."
       ],
       "metadata": {
         "colab_type": "text",
@@ -204,7 +224,10 @@
         "model.compile(optimizer='adam',\n",
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
-        "\nmodel.fit(train_images, train_labels, batch_size=64, epochs=6)"
+        "\n",
+        "model.fit(train_images, train_labels, batch_size=64, epochs=6)\n",
+        "\n",
+        "test_loss, test_acc = model.evaluate(test_images, test_labels)"
       ],
       "outputs": [
         {
@@ -212,21 +235,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/6\n",
-            "60000/60000 [==============================] - 79s 1ms/sample - loss: 0.5970 - acc: 0.9440\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 72s 1ms/sample - loss: 0.6494 - acc: 0.9070\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 2/6\n",
-            "60000/60000 [==============================] - 81s 1ms/sample - loss: 0.5153 - acc: 0.9645\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 67s 1ms/sample - loss: 0.4760 - acc: 0.9606\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 3/6\n",
-            "60000/60000 [==============================] - 76s 1ms/sample - loss: 0.4976 - acc: 0.9693\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 67s 1ms/sample - loss: 0.4480 - acc: 0.9691\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 4/6\n",
-            "60000/60000 [==============================] - 77s 1ms/sample - loss: 0.4903 - acc: 0.9711\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 68s 1ms/sample - loss: 0.4365 - acc: 0.9718\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 5/6\n",
-            "60000/60000 [==============================] - 80s 1ms/sample - loss: 0.4840 - acc: 0.9724\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "60000/60000 [==============================] - 68s 1ms/sample - loss: 0.4329 - acc: 0.9739\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
             "Epoch 6/6\n",
-            "60000/60000 [==============================] - 76s 1ms/sample - loss: 0.4818 - acc: 0.9733\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
+            "60000/60000 [==============================] - 68s 1ms/sample - loss: 0.4287 - acc: 0.9758\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "10000/10000 [==============================] - 6s 576us/sample - loss: 0.4283 - acc: 0.9751\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
           ]
         }
       ],
-      "execution_count": 8,
+      "execution_count": 22,
       "metadata": {
         "colab_type": "code",
         "id": "MdDzI75PUXrG",
@@ -246,27 +270,6 @@
     {
       "cell_type": "code",
       "source": [
-        "test_loss, test_acc = model.evaluate(test_images, test_labels)"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10000/10000 [==============================] - 3s 290us/sample - loss: 0.4339 - acc: 0.9806\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n"
-          ]
-        }
-      ],
-      "execution_count": 11,
-      "metadata": {
-        "colab_type": "code",
-        "id": "gtyDF0MKUcM7",
-        "colab": {}
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "print(f\"Test accuracy {test_acc * 100:.2f} %\")"
       ],
       "outputs": [
@@ -274,11 +277,11 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Test accuracy 98.06 %\n"
+            "Test accuracy 97.51 %\n"
           ]
         }
       ],
-      "execution_count": 10,
+      "execution_count": 23,
       "metadata": {
         "colab_type": "code",
         "id": "0LvwaKhtUdOo",
@@ -288,7 +291,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As you can see, our simple binarized CNN has achieved a test accuracy of over 98 %. Not bad for a few lines of code!"
+        "As you can see, our simple binarized CNN has achieved a test accuracy of over 97.5 %. Not bad for a few lines of code!"
       ],
       "metadata": {
         "colab_type": "text",
@@ -316,7 +319,7 @@
     },
     "language_info": {
       "name": "python",
-      "version": "3.6.8",
+      "version": "3.7.3",
       "mimetype": "text/x-python",
       "codemirror_mode": {
         "name": "ipython",
@@ -327,7 +330,7 @@
       "file_extension": ".py"
     },
     "nteract": {
-      "version": "0.12.3"
+      "version": "0.13.0"
     }
   },
   "nbformat": 4,
